# semiconductor-supplychain-research

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  Data.ipynb  README.md  Requirements.txt  SCHEMA.md  company_list.csv  deep-research-report-1-general.md  deep-research-report-2-asia.md  main.cypher  pyproject.toml
.cursor/rules/: docs.mdc  repo.mdc
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md
.ipynb_checkpoints/: Data-checkpoint.ipynb  SCHEMA-checkpoint.md
apps/: README.md
apps/ui-prototype/: README.md  app.js  index.html  package-lock.json  package.json  styles.css
contracts/: README.md
contracts/p0/: README.md  manifest.yaml
contracts/v1/: README.md  company_dependency_edges.v1.json  company_taxonomy.v1.json  company_universe.v1.json
docs/: ARCHITECTURAL_DRIVERS.md  ARCHITECTURE_NOTES.md  DATA_STRATEGY.md  P0_DATA_CONTRACTS.md  PROJECT_VISION.md  README.md  REPO_STRUCTURE_PLAN.md  RESEARCH_QUESTIONS.md  RESEARCH_SYNTHESIS.md  ROADMAP.md  SOURCE_STRATEGY.md  V1_PRODUCT_BRIEF.md  V1_SCOPE.md  V1_TAXONOMY.md  V1_UI_ARCHITECTURE.md  V2_FRONTEND_ARCHITECTURE.md  V2_PRODUCT_SPEC.md  V3_FRONTEND_ARCHITECTURE.md  V3_PRODUCT_SPEC.md
docs/decisions/: 2026-04-17-initial-runtime.md  2026-04-17-p0-source-spine.md  2026-04-18-company-only-dependency-graph.md  2026-04-18-freeze-v1-build-v2-in-parallel.md  2026-04-18-graph-first-demo-workspace.md  (+2 more)
scripts/: README.md  build_company_universe_seed_fixture.py  refresh_ui_prototype_demo.py  run_p0_fixture.py  run_v1_seed_fixture.py
src/: README.md
tests/: README.md  __init__.py
(+163 files in other folders)
